--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ a{
 #nav2{
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: flex-end;
     align-items: center;
     font-family: 'Roboto', sans-serif;
@@ -110,7 +111,7 @@ hr{
     flex-direction: column;
     flex-direction: wrap;
     background-color: white;
-    width: 30%;
+    max-width: 320px;
     font-family: 'Roboto', sans-serif;
     margin:20px auto;
 }
@@ -198,4 +199,21 @@ footer{
 footer span{
     color: white;
     font-family: 'Roboto', sans-serif;
+}
+
+@media only screen and (max-width: 450px) {
+    #social-icon{
+        display: none;
+    }
+    nav ul{
+        margin-top: 20px;
+        margin-right: 10px;
+    }
+    .nav-content{
+        font-size: 0.9rem;
+        margin:20px 10px;
+    }
+    nav{
+        width: 100%;
+    }
 }
